chore: configure GH Pages build path

--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,7 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "docs",
               "budgets": [
                 {
                   "type": "initial",
