--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ghpages": "ng build --configuration production --base-href /The-Online-Cookbook/",
     "watch": "ng build --watch --configuration development"
   },
   "private": true,
